Fix spacing between button rows

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -28,3 +28,8 @@
     background-color: transparent;
     color: var(--bs-primary) if($enable-important-utilities, !important, null);
 }
+
+a.btn {
+    margin-top: $spacer * .25;
+    margin-bottom: $spacer * .25;
+}
